--- a/src/Netpositive/LoginBundle/Resources/views/Default/index.html.twig
+++ b/src/Netpositive/LoginBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,7 @@
-Hello {{ name }}!
+{% extends "::base.html.twig" %}
+
+{% block body %}
+	<a href="{{path('fos_user_security_logout')}}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
+    <h1>Hello</h1>
+    <h2>This is login protected page!</h2>
+{% endblock %}
